# ai_discovery_mcp_server

./: README.md
mcp_server/: Dockerfile  README.md  pyproject.toml
mcp_server/src/: main.py  utils.py
simple_mcp_client/: LICENSE  README.md  main.py  requirements.txt
